Reenable I²C support

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,6 +47,10 @@ if WITH_EVENTHANDLER
 AM_CPPFLAGS += -DEVENTHANDLER
 endif
 
+if WITH_I2C
+AM_CPPFLAGS += -DI2CSUPPORT
+endif
+
 if WITH_CCU2
 AM_CPPFLAGS += -DCCU2
 endif
