--- a/configure.ac
+++ b/configure.ac
@@ -109,8 +109,10 @@ AS_IF([test "x$with_ccu2" = "xyes"], [
 #	])
 
 AC_ARG_WITH([i2c], [AS_HELP_STRING([--without-i2c], [Compile without I2C support (disables all I2C interfaces)])], [with_i2c=no], [])
-AS_IF([test "x$with_i2c" != "xno"], [
-	AC_DEFINE(I2CSUPPORT, [], [Enables compilation of all I2C interfaces and I2C support in PHP])
+AS_IF([test "x$with_i2c" = "xno"], [
+	AM_CONDITIONAL(WITH_I2C, false)
+	], [
+	AM_CONDITIONAL(WITH_I2C, true)
 	])
 
 AC_OUTPUT(Makefile src/Makefile homegear-miscellaneous/src/Makefile)
