--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -155,6 +155,10 @@ serverSettingsPath = /etc/homegear/rpcservers.conf
 # Default: mqttSettingsPath = /etc/homegear/mqtt.conf
 mqttSettingsPath = /etc/homegear/mqtt.conf
 
+# Path to the cloud user map file.
+# Default: cloudUserMapPath = /etc/homegear/cloudusermap.json
+cloudUserMapPath = /etc/homegear/cloudusermap.json
+
 # Path to the device family config files.
 # Default: familyConfigPath = /etc/homegear/families
 familyConfigPath = /etc/homegear/families
