--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -32,7 +32,7 @@
 # Default: authType = cert
 #authType = none
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 #validGroups = 1
 
 [RPCServer1]
@@ -103,7 +103,7 @@ webSocketAuthType = session
 # Default: cacheAssets = 2592000
 cacheAssets = 2592000
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 validGroups = 1
 
 [RPCServer2]
@@ -186,7 +186,7 @@ dhParamPath = /etc/homegear/dh1024.pem
 # Default: cacheAssets = 2592000
 cacheAssets = 2592000
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 validGroups = 1
 
 [RPCServer3]
@@ -268,7 +268,78 @@ dhParamPath = /etc/homegear/dh1024.pem
 # Default: cacheAssets = 2592000
 cacheAssets = 2592000
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
+validGroups = 1
+
+[RPCServer4]
+# Interface to bind the RPC server to. By default IPv4 and IPv6 are
+# enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
+# Default: interface = ::
+interface = ::1
+
+# The port number to bind the RPC server to. This setting is mandatory.
+port = 2004
+
+# Enable Homegear's XML-RPC and binary RPC server on this port.
+# Default: true
+xmlrpcServer = true
+
+# Enable Homegear's JSON-RPC server on this port.
+# Default: true
+jsonrpcServer = true
+
+# Enable Homegear's build-in web server on this port
+# Default: false
+webServer = true
+
+# Enable Homegear's REST server on this port
+# Default: false
+restServer = true
+
+# Path to static web content used by the web server
+# Default: /var/lib/homegear/www
+contentPath = /var/lib/homegear/www/rpc
+
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser =
+# contentPathUser = homegear
+
+# Default: contentPathGroup =
+# contentPathGroup = homegear
+
+# Enable Homegear's build-in WebSocket server on this port
+# WARNING: Enabling Websockets without authentication is a high security risk!
+# So make sure, webSocketAuthType is not set to none!
+# Default: false
+webSocket = true
+
+# Set ssl to "true" to enable SSL support
+ssl = false
+
+# You can specify the authentication types you want to enable here.
+# Can be one or more of the following (seperated by ","):
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
+authType = none
+
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: webSocketAuthType = session
+webSocketAuthType = session
+
+# Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
+# "0" disables the caching.
+# Default: cacheAssets = 2592000
+cacheAssets = 2592000
+
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 validGroups = 1
 
 #[WebServer1]
@@ -338,7 +409,7 @@ cacheAssets = 2592000
 # Redirect HTTP requests to this address
 # redirectTo = https://myserver.com
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 #validGroups = 1
 
 #[WebServer2]
@@ -418,5 +489,5 @@ cacheAssets = 2592000
 # Default: cacheAssets = 2592000
 cacheAssets = 2592000
 
-# Comma separated list of accepted group IDs. Only relevant when authType or webSocketAuthType are specified.
+# Comma separated list of accepted group IDs. Only relevant when authType is specified.
 #validGroups = 1
