Added possibility to disable thread count checking

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -320,6 +320,11 @@ waitForCorrectTime = true
 # Default: prioritizeThreads = true
 prioritizeThreads = true
 
+# Setting maxTotalThreadCount sets the maximum number of threads manually and disables thread count checking. This is
+# needed for Homegear to work in WSL. The minimum possible number to set here is "100".
+# Default: maxTotalThreadCount = 0
+# maxTotalThreadCount = 500
+
 # The number of bytes to allocate for secure memory. Increase it if you get the GCrypt
 # error "Could not allocate memory". "0" disables secure memory. The minimum value is
 # 16384. Values smaller than the minimum value are set to the minimum (= default) value.
