Added script to create PHP 8 build Docker container

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -308,6 +308,12 @@ oauthTokenLifetime = 3600
 # The number of seconds an OAuth refresh token is valid.
 oauthRefreshTokenLifetime = 5184000
 
+# Enable Homegear Daisy Chain
+enableHgdc = false
+
+# Homegear DC Connector port
+hgdcPort = 2017
+
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
