--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Maintainer: Sathya Laufer <sathya@laufers.net>
 Section: misc
 Priority: optional
 Standards-Version: 3.9.6
-Build-Depends: debhelper (>= 8), libhomegear-base (= <BASELIBVER>), libhomegear-node, libhomegear-ipc, libsqlite3-dev (>= 3.7.13), libreadline6-dev | libreadline-dev, libgcrypt20-dev, libgpg-error-dev (>= 1.10), libgnutls28-dev, php8-homegear-dev, libxslt1-dev, libedit-dev, libenchant-dev, libqdbm-dev, libltdl-dev, zlib1g-dev, libtinfo-dev, libgmp-dev, libxml2-dev, libssl-dev, libcurl4-gnutls-dev, zlib1g-dev, libicu-dev, libonig-dev, libsodium-dev
+Build-Depends: debhelper (>= 8), libhomegear-base (= <BASELIBVER>), libhomegear-node, libhomegear-ipc, nodejs-homegear, libsqlite3-dev (>= 3.7.13), libreadline6-dev | libreadline-dev, libgcrypt20-dev, libgpg-error-dev (>= 1.10), libgnutls28-dev, php8-homegear-dev, libxslt1-dev, libedit-dev, libenchant-dev, libqdbm-dev, libltdl-dev, zlib1g-dev, libtinfo-dev, libgmp-dev, libxml2-dev, libssl-dev, libcurl4-gnutls-dev, zlib1g-dev, libicu-dev, libonig-dev, libsodium-dev
 Homepage: https://homegear.eu
 
 Package: homegear
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libhomegear-base (= <BASELIBVER>), libhomegear-node, libhomegear-ipc, wget, libsqlite3-0 (>= 3.7.13), libreadline8 | libreadline7 | libreadline6, adduser (>= 3.113), libgcrypt20, libgnutlsxx28, libgpg-error0 (>= 1.10), unzip (>= 6.0), p7zip-full (>= 9.0), procps, libxslt1.1, libedit2, libenchant1c2a, libqdbm14, libltdl7, zlib1g, libtinfo5 | libtinfo6, libgmp10, libxml2, libssl1.1 | libssl1.0.0, openssl, libcurl3-gnutls, zlib1g, libicu52 | libicu55 | libicu57 | libicu60 | libicu63 | libicu66, libonig2 | libonig4 | libonig5, libsodium18 | libsodium23
+Depends: ${shlibs:Depends}, ${misc:Depends}, libhomegear-base (= <BASELIBVER>), libhomegear-node, libhomegear-ipc, nodejs-homegear, wget, libsqlite3-0 (>= 3.7.13), libreadline8 | libreadline7 | libreadline6, adduser (>= 3.113), libgcrypt20, libgnutlsxx28, libgpg-error0 (>= 1.10), unzip (>= 6.0), p7zip-full (>= 9.0), procps, libxslt1.1, libedit2, libenchant1c2a, libqdbm14, libltdl7, zlib1g, libtinfo5 | libtinfo6, libgmp10, libxml2, libssl1.1 | libssl1.0.0, openssl, libcurl3-gnutls, zlib1g, libicu52 | libicu55 | libicu57 | libicu60 | libicu63 | libicu66, libonig2 | libonig4 | libonig5, libsodium18 | libsodium23
 Replaces: homegear (<< 0.6)
 Breaks: homegear (<< 0.6)
 Description: Interface program to your smart home devices
