Make Homegear replacement for Node.js

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -381,6 +381,10 @@ nodeBlueWatchdogTimeout = 60000
 # Default: nodeBlueManualClientStart = false
 nodeBlueManualClientStart = false
 
+# You can change the default path to Node-RED's red.js for debugging or development purposes here.
+# Default: <dataPath>/node-blue/node-red/node_modules/node-red/red.js
+# nodeRedJsPath =
+
 # Default: ipcThreadCount = 10
 ipcThreadCount = 5
 
