First version with working Node-RED

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -385,6 +385,9 @@ nodeBlueManualClientStart = false
 # Default: <dataPath>/node-blue/node-red/node_modules/node-red/red.js
 # nodeRedJsPath =
 
+# Port the local Node-RED installation listens on
+nodeRedPort = 1999
+
 # Default: ipcThreadCount = 10
 ipcThreadCount = 5
 
