--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -16,8 +16,9 @@ xmlrpcServer = true
 jsonrpcServer = true
 
 # Enable Homegear's build-in web server on this port
+# Web server and RPC server shouldn't be enabled on the same port for security reasons.
 # Default: false
-webServer = true
+webServer = false
 
 # Enable Homegear's REST server on this port
 # Default: false
@@ -25,7 +26,7 @@ restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www/rpc
+# contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -40,7 +41,7 @@ contentPath = /var/lib/homegear/www/rpc
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # So make sure, webSocketAuthType is not set to none!
 # Default: false
-webSocket = true
+webSocket = false
 
 # Set ssl to "true" to enable SSL support
 ssl = false
@@ -59,7 +60,7 @@ authType = none
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
-webSocketAuthType = session
+# webSocketAuthType = session
 
 # Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
 # "0" disables the caching.
@@ -87,8 +88,9 @@ xmlrpcServer = true
 jsonrpcServer = true
 
 # Enable Homegear's build-in web server on this port
+# Web server and RPC server shouldn't be enabled on the same port for security reasons.
 # Default: false
-webServer = true
+webServer = false
 
 # Enable Homegear's REST server on this port
 # Default: false
@@ -96,7 +98,7 @@ restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www/rpc
+# contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -110,7 +112,7 @@ contentPath = /var/lib/homegear/www/rpc
 # Enable Homegear's build-in WebSocket server on this port
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # Default: false
-webSocket = true
+webSocket = false
 
 # Set ssl to "true" to enable SSL support
 ssl = true
@@ -129,7 +131,7 @@ authType = none
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
-webSocketAuthType = session
+# webSocketAuthType = session
 
 # Needed for client certificate login
 # Default: caPath = /etc/homegear/homegearca.crt
@@ -170,8 +172,9 @@ xmlrpcServer = true
 jsonrpcServer = true
 
 # Enable Homegear's build-in web server on this port
+# Web server and RPC server shouldn't be enabled on the same port for security reasons.
 # Default: false
-webServer = true
+webServer = false
 
 # Enable Homegear's REST server on this port
 # Default: false
@@ -179,7 +182,7 @@ restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www/rpc
+# contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -192,7 +195,7 @@ contentPath = /var/lib/homegear/www/rpc
 
 # Enable Homegear's build-in WebSocket server on this port
 # Default: false
-webSocket = true
+webSocket = false
 
 # Set ssl to "true" to enable SSL support
 ssl = true
@@ -211,7 +214,7 @@ authType = basic, cert
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
-webSocketAuthType = session
+# webSocketAuthType = session
 
 # Needed for client certificate login
 # Default: caPath = /etc/homegear/homegearca.crt
@@ -261,7 +264,7 @@ restServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www/rpc
+# contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -305,22 +308,22 @@ cacheAssets = 2592000
 # Comma separated list of accepted group IDs. Only relevant when authType is specified.
 validGroups = 1
 
-#[WebServer1]
+[WebServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: interface = ::
-#interface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
-#port = 80
+port = 80
 
 # Enable Homegear's rpc server on this port
 # Default: true
-#rpcServer = false
+rpcServer = false
 
 # Enable Homegear's build-in web server on this port
 # Default: false
-#webServer = true
+webServer = true
 
 # Enable Homegear's REST server on this port
 # Default: false
@@ -328,7 +331,7 @@ validGroups = 1
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-#contentPath = /var/lib/homegear/www
+contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -343,10 +346,10 @@ validGroups = 1
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # So make sure, webSocketAuthType is not set to none!
 # Default: false
-#webSocket = true
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
-#ssl = false
+ssl = false
 
 # You can specify the authentication types you want to enable here.
 # Can be one or more of the following (seperated by ","):
@@ -354,7 +357,7 @@ validGroups = 1
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
 # Default: authType = cert
-#authType = none
+authType = none
 
 # You can specify the websocket authentication type here. Never ever use basic auth
 # over an unencrypted connection!
@@ -362,7 +365,7 @@ validGroups = 1
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
-#webSocketAuthType = session
+webSocketAuthType = session
 
 # Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
 # "0" disables the caching.
@@ -375,22 +378,22 @@ cacheAssets = 2592000
 # Comma separated list of accepted group IDs. Only relevant when authType is specified.
 #validGroups = 1
 
-#[WebServer2]
+[WebServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: interface = ::
-#interface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
-#port = 443
+port = 443
 
 # Enable Homegear's rpc server on this port
 # Default: true
-#rpcServer = false
+rpcServer = false
 
 # Enable Homegear's build-in web server on this port
 # Default: false
-#webServer = true
+webServer = true
 
 # Enable Homegear's REST server on this port
 # Default: false
@@ -398,7 +401,7 @@ cacheAssets = 2592000
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-#contentPath = /var/lib/homegear/www
+contentPath = /var/lib/homegear/www/rpc
 
 # Default: contentPathPermissions = 550
 # contentPathPermissions = 550
@@ -413,10 +416,10 @@ cacheAssets = 2592000
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # So make sure, webSocketAuthType is not set to none!
 # Default: false
-#webSocket = true
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
-#ssl = true
+ssl = true
 
 # You can specify the authentication types you want to enable here.
 # Can be one or more of the following (seperated by ","):
@@ -424,7 +427,7 @@ cacheAssets = 2592000
 # - basic: Use basic authentication
 # - cert: Use certificate authentication (only works when "ssl" is "true")
 # Default: authType = cert
-#authType = none
+authType = none
 
 # You can specify the websocket authentication type here. Never ever use basic auth
 # over an unencrypted connection!
@@ -432,20 +435,20 @@ cacheAssets = 2592000
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
 # Default: webSocketAuthType = session
-#webSocketAuthType = session
+webSocketAuthType = session
 
 # Needed for client certificate login
 # Default: caPath = /etc/homegear/homegearca.crt
-#caPath = /etc/homegear/ca/cacert.pem
+caPath = /etc/homegear/ca/cacert.pem
 
 # Default: certPath = /etc/homegear/homegear.crt
-#certPath = /etc/homegear/homegear.crt
+certPath = /etc/homegear/homegear.crt
 
 # Default: keyPath = /etc/homegear/homegear.key
-#keyPath = /etc/homegear/homegear.key
+keyPath = /etc/homegear/homegear.key
 
 # Default: dhParamPath = /etc/homegear/dh1024.pem
-#dhParamPath = /etc/homegear/dh1024.pem
+dhParamPath = /etc/homegear/dh1024.pem
 
 # Set to the number of seconds, assets (CSS files, JS files, images, ...) should be cached by the browser.
 # "0" disables the caching.
