--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -241,7 +241,7 @@ validGroups = 1
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: interface = ::
-interface = ::1
+interface = 127.0.0.1
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2004
