Seperated homegear-node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,8 +118,15 @@ set(SOURCE_FILES
         src/main.cpp
         src/IpcLogger.cpp
         src/IpcLogger.h
-        src/Database/SystemVariableController.cpp src/Database/SystemVariableController.h src/VariableProfiles/VariableProfileManager.cpp src/VariableProfiles/VariableProfileManager.h src/RPC/RpcMethods/VariableProfileRpcMethods.cpp src/RPC/RpcMethods/VariableProfileRpcMethods.h src/RPC/RpcMethods/UiRpcMethods.cpp src/RPC/RpcMethods/UiRpcMethods.h src/RPC/RpcMethods/BuildingRpcMethods.cpp src/RPC/RpcMethods/BuildingRpcMethods.h src/Node-BLUE/FlowParser.cpp src/Node-BLUE/FlowParser.h src/RPC/RpcMethods/NodeBlueRpcMethods.cpp src/RPC/RpcMethods/NodeBlueRpcMethods.h src/RPC/RpcMethods/UiNotificationsRpcMethods.cpp src/RPC/RpcMethods/UiNotificationsRpcMethods.h src/Node-BLUE/NodeBlueCredentials.cpp src/Node-BLUE/NodeBlueCredentials.h src/Nodejs/Nodejs.cpp src/Nodejs/Nodejs.h src/Node-BLUE/Node-PINK/Nodepink.cpp src/Node-BLUE/Node-PINK/Nodepink.h src/Node-BLUE/NodeRedNode.cpp src/Node-BLUE/NodeRedNode.h src/Node-BLUE/Node-PINK/NodepinkWebsocket.cpp src/Node-BLUE/Node-PINK/NodepinkWebsocket.h)
+        src/Database/SystemVariableController.cpp src/Database/SystemVariableController.h src/VariableProfiles/VariableProfileManager.cpp src/VariableProfiles/VariableProfileManager.h src/RPC/RpcMethods/VariableProfileRpcMethods.cpp src/RPC/RpcMethods/VariableProfileRpcMethods.h src/RPC/RpcMethods/UiRpcMethods.cpp src/RPC/RpcMethods/UiRpcMethods.h src/RPC/RpcMethods/BuildingRpcMethods.cpp src/RPC/RpcMethods/BuildingRpcMethods.h src/Node-BLUE/FlowParser.cpp src/Node-BLUE/FlowParser.h src/RPC/RpcMethods/NodeBlueRpcMethods.cpp src/RPC/RpcMethods/NodeBlueRpcMethods.h src/RPC/RpcMethods/UiNotificationsRpcMethods.cpp src/RPC/RpcMethods/UiNotificationsRpcMethods.h src/Node-BLUE/NodeBlueCredentials.cpp src/Node-BLUE/NodeBlueCredentials.h src/Node-BLUE/Node-PINK/Nodepink.cpp src/Node-BLUE/Node-PINK/Nodepink.h src/Node-BLUE/NodeRedNode.cpp src/Node-BLUE/NodeRedNode.h src/Node-BLUE/Node-PINK/NodepinkWebsocket.cpp src/Node-BLUE/Node-PINK/NodepinkWebsocket.h)
+
+set(SOURCE_FILES_NODE
+        src/Nodejs/Nodejs.cpp
+        src/Nodejs/Nodejs.h
+        src/Nodejs/main.cpp)
 
 add_custom_target(homegear COMMAND ../../devscripts/makeAll.sh SOURCES ${SOURCE_FILES})
+add_custom_target(homegear-node COMMAND ../../devscripts/makeAll.sh SOURCES ${SOURCE_FILES_NODE})
 
 add_library(homegear-dummy ${SOURCE_FILES})
+add_library(homegear-dummy2 ${SOURCE_FILES_NODE})
