--- a/misc/State Directory/node-blue/node-red/.gitignore
+++ b/misc/State Directory/node-blue/node-red/.gitignore
@@ -14,6 +14,8 @@ credentials.json
 flows*.json
 nodes/node-red-nodes/
 node_modules
+public/red/*
+public/vendor/*
 nodes/core/locales/zz-ZZ
 !packages/node_modules
 !test/**/node_modules
