Modified debian package dependencies to support Debian bullseye

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -217,8 +217,7 @@ nodeBlueDataPath = /var/lib/homegear/node-blue/data
 # Default: nodeBlueDataPathGroup =
 # nodeBlueDataPathGroup = homegear
 
-# Enables highlighting of active nodes and display of last output in Node-BLUE. As this needs a lot of resources
-# disable it if you finished setting up your logic.
+# Enables highlighting of active nodes and display of last output in Node-BLUE.
 nodeBlueDebugOutput = true
 
 # Only used when "nodeBlueDebugOutput" is set to "true". Above this number of debug events (per 10 seconds), nodes are
