--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,8 +4,13 @@ AM_CPPFLAGS = -Wall -std=c++17 -DFORTIFY_SOURCE=2 -DGCRYPT_NO_DEPRECATED
 AM_LDFLAGS = -Wl,--export-dynamic -Wl,-rpath=/lib/homegear -Wl,-rpath=/usr/lib/homegear -Wl,-rpath=/usr/local/lib/homegear
 if HAVE_PHP_HEADERS
 # {{{ PHP libraries
-LIBS += -Wl,-Bstatic -lphp8-homegear -Wl,-Bdynamic -lz -lexslt -lresolv -ledit -lrt -lltdl -lgmp -lenchant -lrt -lm -lnsl -lxml2 -lxslt -licuuc -licui18n -licuio -lzip -lcrypto -lssl -lgnutls -lonig -lsodium -lutil
+LIBS += -Wl,-Bstatic -lphp8-homegear -Wl,-Bdynamic -lz -lexslt -lresolv -ledit -lrt -lltdl -lgmp -lrt -lm -lnsl -lxml2 -lxslt -licuuc -licui18n -licuio -lzip -lcrypto -lssl -lgnutls -lonig -lsodium -lutil
 # }}}
+if HAVE_ENCHANT2_HEADERS
+LIBS += -lenchant-2
+else
+LIBS += -lenchant
+endif
 endif
 
 if HAVE_CURL
