Enable possibility for anonymous login to Node-BLUE or subpaths

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -232,6 +232,10 @@ nodeBlueEventLimit2 = 300
 # are sent anymore. This also disables the output of "debug" nodes.
 nodeBlueEventLimit3 = 400
 
+# Comma sepeated list of Node-BLUE URI paths that don't require login. I. e. paths starting with the text you enter here
+# can be accessed anonymously. If you want to exclude https://homegearip:2002/node-blue/ui/, put /ui/ here.
+nodeBlueUriPathsExcludedFromLogin = /ui/
+
 # Path where Admin UI is located.
 # Default: adminUiPath = /var/lib/homegear/admin-ui
 adminUiPath = /var/lib/homegear/admin-ui/public
