Set NODE_OPTIONS when running Node-RED

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -391,6 +391,9 @@ nodeBlueManualClientStart = false
 # Port the local Node-RED installation listens on
 nodeRedPort = 1999
 
+# Set these node options when starting Node.js from Homegear. This sets the environment variable NODE_OPTIONS.
+nodeOptions = --max_old_space_size=400
+
 # Default: ipcThreadCount = 10
 ipcThreadCount = 5
 
