--- a/debian/rules
+++ b/debian/rules
@@ -56,21 +56,13 @@ override_dh_auto_install:
 	find $(CURDIR)/debian/homegear/usr/share/homegear -type f -exec chmod 444 {} \;
 
 	# {{{ Create Node.js links to be able to run npm in this script
-	if test ! -e /usr/bin/npm; then
-		# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
-		ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npm /usr/bin/npm
-	fi
-	if test ! -e /usr/bin/npx; then
-		# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
-		ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npx /usr/bin/npx
-	fi
-	if test ! -e /usr/bin/node; then
-		ln -s $(CURDIR)/debian/homegear/usr/bin/homegear-node /usr/bin/node
-	fi
-	if test ! -e /usr/bin/node_modules; then
-		# This works and doesn't bite with the real Node.js if installled.
-		ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules /usr/bin/node_modules
-	fi
+	# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
+	if test ! -e /usr/bin/npm; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npm /usr/bin/npm; fi
+	# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
+	if test ! -e /usr/bin/npx; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npx /usr/bin/npx; fi
+	if test ! -e /usr/bin/node; then ln -s $(CURDIR)/debian/homegear/usr/bin/homegear-node /usr/bin/node; fi
+	# This works and doesn't bite with the real Node.js if installled.
+	if test ! -e /usr/bin/node_modules; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules /usr/bin/node_modules; fi
 	# }}}
 
 	# {{{ Install Node-RED modules
