--- a/debian/rules
+++ b/debian/rules
@@ -57,12 +57,12 @@ override_dh_auto_install:
 
 	# {{{ Create Node.js links to be able to run npm in this script
 	# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
-	if test ! -e /usr/bin/npm; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npm /usr/bin/npm; fi
+	if test ! -e /usr/bin/npm; then ln -s /usr/share/homegear/nodejs/lib/node_modules/npm/bin/npm /usr/bin/npm; fi
 	# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
-	if test ! -e /usr/bin/npx; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules/npm/bin/npx /usr/bin/npx; fi
+	if test ! -e /usr/bin/npx; then ln -s /usr/share/homegear/nodejs/lib/node_modules/npm/bin/npx /usr/bin/npx; fi
 	if test ! -e /usr/bin/node; then ln -s $(CURDIR)/debian/homegear/usr/bin/homegear-node /usr/bin/node; fi
 	# This works and doesn't bite with the real Node.js if installled.
-	if test ! -e /usr/bin/node_modules; then ln -s $(CURDIR)/debian/homegear/usr/share/homegear/nodejs/lib/node_modules /usr/bin/node_modules; fi
+	if test ! -e /usr/bin/node_modules; then ln -s /usr/share/homegear/nodejs/lib/node_modules /usr/bin/node_modules; fi
 	# }}}
 
 	# {{{ Install Node-RED modules
