--- a/debian/rules
+++ b/debian/rules
@@ -68,7 +68,11 @@ override_dh_auto_install:
 	# {{{ Install Node-RED modules
 	rm -Rf $(CURDIR)/debian/homegear/var/lib/homegear/node-blue/node-red/node_modules
 	cd $(CURDIR)/debian/homegear/var/lib/homegear/node-blue/node-red/
-	NODE_OPTIONS=--max-old-space-size=512 npm install --no-audit --no-update-notifier --unsafe-perm --no-fund --production --color false 2>/dev/null
+	NODE_OPTIONS=--max-old-space-size=512 npm install --no-audit --no-update-notifier --unsafe-perm --no-fund --production
+	# }}}
+
+	# {{{ Remove links again
+	rm -f /usr/bin/node
 	# }}}
 
 override_dh_strip:
