--- a/debian/rules
+++ b/debian/rules
@@ -70,8 +70,8 @@ override_dh_auto_install:
 	cd $(CURDIR)/debian/homegear/var/lib/homegear/node-blue/node-red/ && NODE_OPTIONS=--max-old-space-size=512 npm install --no-audit --no-update-notifier --unsafe-perm --no-fund --production
 	# }}}
 
-	# {{{ Remove links again
-	rm -f /usr/bin/node
+	# {{{ Remove link to homegear-node again, so it can be recreated correctly when installing Homegear
+	if [[ $(readlink -f /usr/bin/node) == "$(CURDIR)/debian/homegear/usr/bin/homegear-node" ]]; then rm -f /usr/bin/node; fi
 	# }}}
 
 override_dh_strip:
