Replaced settings xmlrpcServer and jsonrpcServer with rpcServer

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -7,13 +7,9 @@ interface = ::
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2001
 
-# Enable Homegear's XML-RPC and binary RPC server on this port. 
-# Default: true
-xmlrpcServer = true
-
-# Enable Homegear's JSON-RPC server on this port. 
-# Default: true
-jsonrpcServer = true
+# Enable Homegear's RPC servers on this port.
+# Default: false
+rpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Web server and RPC server shouldn't be enabled on the same port for security reasons.
@@ -79,13 +75,9 @@ interface = ::
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2002
 
-# Enable Homegear's XML-RPC and binary RPC server on this port. 
-# Default: true
-xmlrpcServer = true
-
-# Enable Homegear's JSON-RPC server on this port. 
-# Default: true
-jsonrpcServer = true
+# Enable Homegear's RPC servers on this port.
+# Default: false
+rpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Web server and RPC server shouldn't be enabled on the same port for security reasons.
@@ -163,13 +155,9 @@ interface = ::
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2003
 
-# Enable Homegear's XML-RPC and binary RPC server on this port. 
-# Default: true
-xmlrpcServer = true
-
-# Enable Homegear's JSON-RPC server on this port. 
-# Default: true
-jsonrpcServer = true
+# Enable Homegear's RPC servers on this port.
+# Default: false
+rpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Web server and RPC server shouldn't be enabled on the same port for security reasons.
@@ -246,13 +234,9 @@ interface = 127.0.0.1
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2004
 
-# Enable Homegear's XML-RPC and binary RPC server on this port.
-# Default: true
-xmlrpcServer = true
-
-# Enable Homegear's JSON-RPC server on this port.
-# Default: true
-jsonrpcServer = true
+# Enable Homegear's RPC servers on this port.
+# Default: false
+rpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Default: false
@@ -318,7 +302,7 @@ interface = ::
 port = 80
 
 # Enable Homegear's rpc server on this port
-# Default: true
+# Default: false
 rpcServer = false
 
 # Enable Homegear's build-in web server on this port
@@ -388,7 +372,7 @@ interface = ::
 port = 443
 
 # Enable Homegear's rpc server on this port
-# Default: true
+# Default: false
 rpcServer = false
 
 # Enable Homegear's build-in web server on this port
@@ -474,13 +458,9 @@ cacheAssets = 2592000
 # The port number to bind the RPC server to. This setting is mandatory.
 #port = 2000
 
-# Enable Homegear's XML-RPC and binary RPC server on this port.
-# Default: true
-#xmlrpcServer = true
-
-# Enable Homegear's JSON-RPC server on this port.
-# Default: true
-#jsonrpcServer = true
+# Enable Homegear's RPC servers on this port.
+# Default: false
+#rpcServer = true
 
 # Set ssl to "true" to enable SSL support
 #ssl = false
