Added dirty flag for factory database

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -100,23 +100,23 @@ databaseSynchronous = true
 # By default the database is stored in "dataPath". With databasePath you can set an alternative directory.
 # databasePath =
 
-# Homegear supports writing to a second database (the maintenance database) which is only written to in maintenance
+# Homegear supports writing to a second database (the factory database) which is only written to in maintenance
 # mode. The database must preexist - i. e. no empty database is created.
 # The maintenance database preserves the original state of an installation and can be restored on factory reset.
 # Sometimes changes are required to this database though (i. e. device replacement). This is why Homegear supports
 # writing to this database in maintenance mode.
 # !!! Be very careful using the maintenance mode as not all operations are possible and allowed. Mostly never delete
-# something in the main database that exists in the maintenance database without enabling maintenance mode first. !!!
-# maintenanceDatabasePath =
+# something in the main database that exists in the factory database without enabling maintenance mode first. !!!
+# factoryDatabasePath =
 
 # By default database backups are stored in "dataPath". With databaseBackupPath you can set an alternative backup
 # directory.
 # databaseBackupPath =
 
-# This setting is only relevant, when a maintenance database is used and "maintenanceDatabasePath" is set.
+# This setting is only relevant, when a factory database is used and "factoryDatabasePath" is set.
 # Providing a backup path for the maintance database is mandatory when backups are required. When this setting is unset,
-# no backups of the maintenance database are created.
-# maintenanceDatabaseBackupPath =
+# no backups of the factory database are created.
+# factoryDatabaseBackupPath =
 
 # databaseMaxBackups defines the maximum number of database backups to create. When this number is reached,
 # old backups are deleted.
