Added UI translation path

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -276,6 +276,9 @@ uiPath = /var/lib/homegear/ui
 # Default: uiPathGroup =
 # uiPathGroup = homegear
 
+# Path where UI translation files are stored
+uiTranslationPath = /var/lib/homegear/admin-ui/translations/modules
+
 # Reads "defaultRoles.json" on start and recreates all roles in database. Disable this, if you want to create custom
 # roles.
 # Default: reloadRolesOnStartup = true
